no more mention of environment

--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -21,7 +21,7 @@
         tls:
           - hosts :
             - "matrix.{{ domain_name }}"
-            secretName: "matix-{{ env }}-tls"
+            secretName: "matrix-tls-secret"
       wellknown.enabled: true
       extraConfig:
         enable_registration_without_verification: true
