external-dns installation instead of update with synthesio.ovh.domain

--- a/ansible/roles/ingress-controller/tasks/main.yml
+++ b/ansible/roles/ingress-controller/tasks/main.yml
@@ -31,14 +31,15 @@
 #  debug:
 #    msg: "{{ domain_name }}"
 
-- name: Modify DNS zone to point to the ingress-controller external IP
-  synthesio.ovh.domain:
-    endpoint: "{{ ovh.endpoint }}"
-    application_key: "{{ ovh.application_key }}"
-    application_secret: "{{ ovh.application_secret }}"
-    consumer_key: "{{ ovh.consumer_key }}"
-    domain: "{{ domain_name }}"
-    value: "{{ ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip }}"
-    record_type: "A"
-    name: "matrix"
-    record_ttl: 0
+#- name: Modify DNS zone to point to the ingress-controller external IP
+#  synthesio.ovh.domain:
+#    endpoint: "{{ ovh.endpoint }}"
+#    application_key: "{{ ovh.application_key }}"
+#    application_secret: "{{ ovh.application_secret }}"
+#    consumer_key: "{{ ovh.consumer_key }}"
+#    domain: "{{ domain_name }}"
+#    value: "{{ ingress_controller_service.resources[0].status.loadBalancer.ingress[0].ip }}"
+#    record_type: "A"
+#    name: "matrix"
+#    record_ttl: 0
+
