servername specific to each environment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ env:
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
   DOMAIN_NAME: ${{ vars.DOMAIN_NAME }}
   ISSUER_MAIL: ${{ vars.ISSUER_MAIL }}
+  # variables used by matrix components
+  SERVER_SUBDOMAIN_NAME: ${{ vars.SERVER_SUBDOMAIN_NAME }}
 
 jobs:
   set_environment:
