--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -8,6 +8,7 @@
   kubernetes.core.helm:
     name: matrix-synapse
     chart_ref: ananace-charts/matrix-synapse
+    release_state: "{{ absent_or_present }}"
     release_namespace: default
     release_values:
       synapse:
