disable registration by default

--- a/ansible/roles/element-web/tasks/main.yml
+++ b/ansible/roles/element-web/tasks/main.yml
@@ -30,6 +30,7 @@
             secretName: "element-tls-secret"
 #      wellknown:
 #        enabled: true
-#      extraConfig:
-#        enable_registration_without_verification: true
+      extraConfig:
+        enable_registration: false
+        enable_registration_without_verification: false
     update_repo_cache: yes
