--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,11 @@
 name: 'Deployment'
 
 on:
+  workflow_dispatch:
   push:
+    branches:
+      - develop
+      - preprod
 
 permissions:
   contents: read
