--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -35,7 +35,9 @@
         enable_registration_without_verification: false
         email:
           smtp_host: "{{ matrix.smtp_host }}"
-          smtp_port: 25
+          # FIXME smtp_port set with ansible variable is consider as string and not int
+          # smtp_port: "{{ matrix.smtp_port }}"
+          smtp_port: 587
           smtp_user: "{{ matrix.smtp_user }}"
           smtp_pass: "{{ matrix.smtp_pass }}"
           notif_from: "Your Friendly %(app)s homeserver <noreply@{{ matrix.server_name }}>"
