operator lifecycle manager installation

--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -8,5 +8,6 @@
     - ingress-controller
     - cert-manager
     - external-dns
+    - operator-lifecycle-manager
     - synapse
     - element-web
