--- a/ansible/roles/keycloak/templates/keycloak-db.yml
+++ b/ansible/roles/keycloak/templates/keycloak-db.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: keycloak-db
+  namespace: keycloak
 spec:
   serviceName: keycloak-db-service
   selector:
@@ -30,10 +31,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: keycloak-db
+  namespace: keycloak
 spec:
   selector:
     app: keycloak-db
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 5432
     targetPort: 5432
