keycloak operator works

--- a/ansible/roles/keycloak-operator/files/kc-subscription.yml
+++ b/ansible/roles/keycloak-operator/files/kc-subscription.yml
@@ -6,6 +6,6 @@ metadata:
 spec:
   channel: candidate
   name: keycloak-operator
-  source: default-catalog
+  source: operatorhubio-catalog
   sourceNamespace: olm
   installPlanApproval: Automatic
