--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -48,9 +48,9 @@
             client_id: "{{ keycloak.client_id }}"
             client_secret: "{{ keycloak.client_secret }}"
             scopes: ["openid", "profile"]
-#            user_mapping_provider:
-#              config:
-#                localpart_template: "\{\{ user.preferred_username \}\}"
-#                display_name_template: "{{ user.name }}"
+            user_mapping_provider:
+              config:
+                localpart_template: "{% raw %}{{ user.preferred_username }}{% endraw %}"
+                display_name_template: "{% raw %}{{ user.name }}{% endraw %}"
             backchannel_logout_enabled: true # Optional
     update_repo_cache: yes
