--- a/ansible/roles/keycloak/tasks/main.yml
+++ b/ansible/roles/keycloak/tasks/main.yml
@@ -7,6 +7,12 @@
   kubernetes.core.k8s:
     state: present
     template: 'ingress.yml.j2'
+- name: Wait for the keycloak ingress and its secrets to be ready and retrieve the information of the created secret
+  shell: kubectl get secrets -n keycloak keycloak-tls-secret -o jsonpath="{$.data}"
+  register: pod_info
+  until: pod_info.stdout.find("tls.scrt") != -1
+  retries: 30
+  delay: 2
 - name: Create a keycloak instance
   kubernetes.core.k8s:
     state: present
@@ -15,9 +21,3 @@
   kubernetes.core.k8s:
     state: present
     template: 'keycloak-realm.yml'
-- name: Wait for the keycloak app to be ready and retrieve the information of the created ingress
-  shell: kubectl get pod -n keycloak keycloak-psc-0 -o jsonpath="{.status.phase}"
-  register: pod_info
-  until: pod_info.stdout.find("Running") != -1
-  retries: 30
-  delay: 2
