--- a/ansible/roles/keycloak/tasks/main.yml
+++ b/ansible/roles/keycloak/tasks/main.yml
@@ -6,11 +6,11 @@
 - name: Create a keycloak specific ingress
   kubernetes.core.k8s:
     state: present
-    template: 'ingress.yml.j2'
+    template: 'ingress.yml'
 - name: Wait for the keycloak ingress and its secrets to be ready and retrieve the information of the created secret
   shell: kubectl get secrets -n keycloak keycloak-tls-secret -o jsonpath="{$.data}"
   register: pod_info
-  until: pod_info.stdout.find("tls.scrt") != -1
+  until: pod_info.stdout.find("tls.crt") != -1
   retries: 30
   delay: 2
 - name: Create a keycloak instance
