--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -8,5 +8,7 @@
     - ingress-controller
     - cert-manager
     - external-dns
+    - keycloak-operator
+    - keycloak
     - synapse
     - element-web
