Revert "Sprint 1 release (#22)"
This reverts commit 3a082699b48dedfe1059dd181f4a564a18b1afdd.

--- a/ansible/roles/element-web/tasks/main.yml
+++ b/ansible/roles/element-web/tasks/main.yml
@@ -30,7 +30,6 @@
             secretName: "element-tls-secret"
 #      wellknown:
 #        enabled: true
-      extraConfig:
-        enable_registration: false
-        enable_registration_without_verification: false
+#      extraConfig:
+#        enable_registration_without_verification: true
     update_repo_cache: yes
