Prosanté connect connexion [WIP]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,9 @@ env:
   KEYCLOAK_DB_PASSWORD: ${{ secrets.KEYCLOAK_DB_PASSWORD }}
   KEYCLOAK_CLIENT_ID: ${{ vars.KEYCLOAK_CLIENT_ID }}
   KEYCLOAK_CLIENT_SECRET: ${{ secrets.KEYCLOAK_CLIENT_SECRET }}
+  PROSANTE_CONNECT_URL: ${vars.PROSANTE_CONNECT_URL}
+  PROSANTE_CONNECT_CLIENT_ID: ${secrets.PROSANTE_CONNECT_CLIENT_ID}
+  PROSANTE_CONNECT_CLIENT_SECRET: ${secrets.PROSANTE_CONNECT_CLIENT_SECRET}
 
 jobs:
   set_environment:
