--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,13 @@ env:
   KEYCLOAK_DB_PASSWORD: ${{ secrets.KEYCLOAK_DB_PASSWORD }}
   KEYCLOAK_CLIENT_ID: ${{ vars.KEYCLOAK_CLIENT_ID }}
   KEYCLOAK_CLIENT_SECRET: ${{ secrets.KEYCLOAK_CLIENT_SECRET }}
-  PROSANTE_CONNECT_URL: ${vars.PROSANTE_CONNECT_URL}
+  # variables used to connect to Pro Santé Connect.
+  # see : https://industriels.esante.gouv.fr/produits-et-services/pro-sante-connect/documentation-technique
+  PROSANTE_CONNECT_ISSUER: ${vars.PROSANTE_CONNECT_ISSUER}
+  PROSANTE_CONNECT_AUTHORIZATION_ENDPOINT: ${PROSANTE_CONNECT_AUTHORIZATION_ENDPOINT}
+  PROSANTE_CONNECT_TOKEN_ENDPOINT: ${PROSANTE_CONNECT_TOKEN_ENDPOINT}
+  PROSANTE_CONNECT_USERINFO_ENDPOINT: ${PROSANTE_CONNECT_USERINFO_ENDPOINT}
+  PROSANTE_CONNECT_JKWS_URI: ${PROSANTE_CONNECT_JKWS_URI}
   PROSANTE_CONNECT_CLIENT_ID: ${secrets.PROSANTE_CONNECT_CLIENT_ID}
   PROSANTE_CONNECT_CLIENT_SECRET: ${secrets.PROSANTE_CONNECT_CLIENT_SECRET}
 
