WIP : first user access_token retrieved and image file uploaded

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,8 @@ env:
   # SMTP_PORT: ${{ vars.SMTP_PORT }}
   SMTP_USER: ${{ vars.SMTP_USER }}
   SMTP_PASS: ${{ secrets.SMTP_PASS }}
+  FIRST_EIMIS_USERNAME: {{ secrets.FIRST_EIMIS_USERNAME }}
+  FIRST_EIMIS_PASSWORD: {{ secrets.FIRST_EIMIS_PASSWORD }}
   # variables used by matrix keycloak
   KECLOAK_DB_INSTANCE_NAME: ${{ vars.KECLOAK_DB_INSTANCE_NAME }}
   KEYCLOAK_DB_USER: ${{ vars.KEYCLOAK_DB_USER }}
