--- a/ansible/roles/synapse-post-install/tasks/main.yml
+++ b/ansible/roles/synapse-post-install/tasks/main.yml
@@ -2,10 +2,12 @@
 - name: first user creation - retrieve registration_shared_secret
   shell: "kubectl get secrets matrix-synapse -o jsonpath=\"{$.data.config\\.yaml}\" | base64 -d | yq -r \".registration_shared_secret\""
   register: registration_shared_secret
+
 - name: first user creation - get a nonce
   ansible.builtin.uri:
     url: "https://{{ matrix.server_name }}/_synapse/admin/v1/register"
   register: nonce
+
 - name: first user creation - generate hmac
   ansible.builtin.shell: |
     nonce='{{ nonce.json.nonce }}'
@@ -13,34 +15,51 @@
     password='{{ matrix.first_eimis_password }}'
     admin='admin'
     secret='{{ registration_shared_secret.stdout }}'
-    
     printf '%s\0%s\0%s\0%s' "$nonce" "$username" "$password" "$admin" |
     openssl sha1 -hmac "$secret" |
     awk '{print $2}'
   register: hmac
-- name: first user creation - register user with synapse API and retrieve access-token
+
+- name: first user creation - try to login and get access-token
+  ansible.builtin.uri:
+    url: "https://{{ matrix.server_name }}/_matrix/client/v3/login"
+    method: POST
+    body: "{{ lookup('template', 'login.json') }}"
+    body_format: json
+  register: login_intent
+
+- name: first user creation - set access-token var
+  set_fact:
+    access_token: "{{ login_intent.json.access_token }}"
+  when: login_intent.status==200
+
+- name: first user creation - register user with synapse API and get access-token, only executed if login failed
   ansible.builtin.uri:
     url: "https://{{ matrix.server_name }}/_synapse/admin/v1/register"
     method: POST
     body: "{{ lookup('template', 'register.json') }}"
     body_format: json
-  register: admin_user
-  failed_when:
-    - admin_user.status!=200
-    - admin_user.json.errcode!="M_USER_IN_USE"
-#- name: upload files to synapse and retrieve the MXC uri
-#  ansible.builtin.uri:
-#    url: "https://{{ matrix.server_name }}/_matrix/media/v3/upload?filename=psc_picto.png"
-#    #    user: your_username
-#    #    password: your_pass
-#    method: POST
-#    force_basic_auth: true
-#    status_code: 201
-#    body_format:  form-multipart
-#    body:
-#      file1:
-#        content: text based file content
-#        filename: psc_picto.png
-#        mime_type: image/png
-#  register: mxc
+  register: register_intent
+  when: login_intent.status!=200
+
+- name: first user creation - set access-token var
+  set_fact:
+    access_token: "{{ register_intent.json.access_token }}"
+  when: login_intent.status!=200
+
+- name: upload files to synapse and retrieve the MXC uri
+  ansible.builtin.uri:
+    url: "https://{{ matrix.server_name }}/_matrix/media/v3/upload?filename=psc_picto.png"
+    #    user: your_username
+    #    password: your_pass
+    method: POST
+    headers:
+      Authorization: "Bearer {{ access_token }}"
+    body_format: form-multipart
+    body:
+      file1:
+        content: "{{ lookup('files', 'ProSanteConnect_PICTO_COULEURS.png') }}"
+        filename: psc_picto.png
+        mime_type: image/png
+  register: mxc
 #- name: update synapse config with the MXC uri retrieved
