--- a/ansible/roles/synapse-post-install/tasks/main.yml
+++ b/ansible/roles/synapse-post-install/tasks/main.yml
@@ -47,19 +47,43 @@
     access_token: "{{ register_intent.json.access_token }}"
   when: login_intent.status!=200
 
-- name: upload files to synapse and retrieve the MXC uri
+- name: PSC connect button image - upload files to synapse and retrieve the MXC uri
   ansible.builtin.uri:
     url: "https://{{ matrix.server_name }}/_matrix/media/v3/upload?filename=psc_picto.png"
-    #    user: your_username
-    #    password: your_pass
     method: POST
     headers:
       Authorization: "Bearer {{ access_token }}"
     body_format: form-multipart
     body:
       file1:
-        content: "{{ lookup('files', 'ProSanteConnect_PICTO_COULEURS.png') }}"
+        content: "{{ lookup('file', 'ProSanteConnect_PICTO_COULEURS.png') }}"
         filename: psc_picto.png
         mime_type: image/png
   register: mxc
-#- name: update synapse config with the MXC uri retrieved
+
+- name: PSC connect button image - Create temporary file
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: temp
+  register: config_matrix_folder
+  changed_when: False
+
+- name: PSC connect button image - get matrix homeserver.yaml config from configmap data
+  shell: "kubectl get configmaps matrix-synapse -o jsonpath=\"{$.data.homeserver\\.yaml}\" > {{ config_matrix_folder.path }}/homeserver.yaml"
+
+- name: PSC connect button image - modify matrix homeserver.yaml config
+  shell: "yq -Y '.oidc_providers[1].idp_icon = \"{{ mxc.json.content_uri }}\"' {{ config_matrix_folder.path }}/homeserver.yaml"
+  register: homeserver
+
+- name: PSC connect button image - set homeserver_patch var
+  set_fact:
+    homeserver_patch: |
+      {
+        data:
+          {
+            "homeserver.yaml": "{{ homeserver.stdout }}"
+          }
+      }        
+
+#- name: PSC connect button image - update matrix configmap with modified values
+#  shell: "kubectl patch configmaps matrix-synapse -p '{{ homeserver_patch }}' "
