PSC image displayed on first page !

--- a/ansible/roles/synapse-post-install/templates/deployment-patch.yml
+++ b/ansible/roles/synapse-post-install/templates/deployment-patch.yml
@@ -5,9 +5,11 @@ spec:
         - name: synapse
           volumeMounts:
             - name: extraconfig
-#              mountPath: /synapse/config/conf.d/extraconfig/
               mountPath: /etc/matrix-synapse/conf.d/
       volumes:
         - configMap:
             name: matrix-synapse-extraconfig
           name: extraconfig
+          items:
+            - key: "extraconfig.yaml"
+              path: "extraconfig.yaml"
