#48 : ignore errors when trying to log with a non-existing user

--- a/ansible/roles/synapse-post-install/tasks/main.yml
+++ b/ansible/roles/synapse-post-install/tasks/main.yml
@@ -27,6 +27,7 @@
     body: "{{ lookup('template', 'login.json') }}"
     body_format: json
   register: login_intent
+  ignore_errors: true
 
 - name: first user creation - set access-token var
   set_fact:
