#44 : discovery room on homeserver

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ env:
   FIRST_EIMIS_PASSWORD: ${{ secrets.FIRST_EIMIS_PASSWORD }}
   DUMMY_USERNAME: ${{ secrets.DUMMY_USERNAME }}
   DUMMY_PASSWORD: ${{ secrets.DUMMY_PASSWORD }}
+  DISCOVERY_ROOMS_SERVERS_LIST: {{ var.DISCOVERY_ROOMS_SERVERS_LIST }}
   # variables used by matrix keycloak
   KECLOAK_DB_INSTANCE_NAME: ${{ vars.KECLOAK_DB_INSTANCE_NAME }}
   KEYCLOAK_DB_USER: ${{ vars.KEYCLOAK_DB_USER }}
