--- a/ansible/roles/discovery-rooms/tasks/discovery-room.yml
+++ b/ansible/roles/discovery-rooms/tasks/discovery-room.yml
@@ -1,5 +1,5 @@
 ---
-- name: Get the room id of the room with the alias discoveryroom
+- name: Get the room id of the previous room with the alias discoveryroom
   uri:
     url: "http://{{ matrix.server_name }}/_matrix/client/v3/directory/room/%23discoveryroom%3A{{matrix.server_name}}?roomAlias=%23discoveryroom%3A{{matrix.server_name}}"
     method: GET
@@ -10,12 +10,17 @@
     follow_redirects: all
     headers:
       Authorization: "Bearer {{ admin_access_token }}"
-  register: discovery_room
+  register: previous_discovery_room
 
-- name: Delete room alias on old discoveryroom
+- name: Print the previous discovery_room room id
+  ansible.builtin.debug:
+    var: previous_discovery_room.json.room_id
+
+- name: Delete previous room and move all users to somewhere
   uri:
-    url: "http://{{ matrix.server_name }}/_matrix/client/v3/directory/room/%23discoveryroom%3A{{matrix.server_name}}?roomAlias=%23discoveryroom%3A{{matrix.server_name}}"
+    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ previous_discovery_room.json.room_id }}"
     method: DELETE
+    body: "{{ lookup('template', 'old_room.json') }}"
     status_code: 200, 404   # allow 404 when no alias exists
     body_format: json
     use_proxy: false
@@ -29,7 +34,7 @@
   uri:
     url: "http://{{ matrix.server_name }}/_matrix/client/v3/createRoom"
     method: POST
-    body: "{{ lookup('template', 'room.json') }}"
+    body: "{{ lookup('template', 'discovery_room.json') }}"
     status_code: 200, 201
     body_format: json
     use_proxy: false
@@ -39,6 +44,6 @@
       Authorization: "Bearer {{ dummy_access_token }}"
   register: discovery_room
 
-- name: Print the discovery_room room id
+- name: Print the new discovery_room room id
   ansible.builtin.debug:
     var: discovery_room.json.room_id
