--- a/ansible/roles/discovery-rooms/tasks/join-discovery-room.yml
+++ b/ansible/roles/discovery-rooms/tasks/join-discovery-room.yml
@@ -35,3 +35,23 @@
       Authorization: "Bearer {{ admin_access_token }}"
   loop: "{{ all_users.json.users }}"
   when: item.name not in discovery_room_members.json.members
+
+- name: Verify the state of the discovery_room
+  uri:
+    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room.json.room_id }}"
+    method: GET
+    status_code: 200
+    body_format: json
+    use_proxy: false
+    headers:
+      Authorization: "Bearer {{ admin_access_token }}"
+
+- name: Verify the users in the discovery_room
+  uri:
+    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ discovery_room.json.room_id }}/members"
+    method: GET
+    status_code: 200
+    body_format: json
+    use_proxy: false
+    headers:
+      Authorization: "Bearer {{ admin_access_token }}"
