--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+#
+# Role used to install a basic Matrix synapse server
+# The configuration of the server will be completed later in synapse-extra-config role
+#
 - name: Add ananace-charts helm repository
   kubernetes.core.helm_repository:
     name: ananace-charts
