--- a/ansible/roles/discovery-rooms/tasks/discovery-room.yml
+++ b/ansible/roles/discovery-rooms/tasks/discovery-room.yml
@@ -12,13 +12,13 @@
       Authorization: "Bearer {{ admin_access_token }}"
   register: previous_discovery_room
 
-- name: Print the previous discovery_room room id
-  ansible.builtin.debug:
-    var: previous_discovery_room.json.room_id
+- name: Set the previous_discovery_room_id variable
+  set_fact:
+    previous_discovery_room_id: "{{ previous_discovery_room.json.room_id }}"
 
 - name: Delete previous room and move all users to somewhere
   uri:
-    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ previous_discovery_room.json.room_id }}"
+    url: "http://{{ matrix.server_name }}/_synapse/admin/v1/rooms/{{ previous_discovery_room_id }}"
     method: DELETE
     body: "{{ lookup('template', 'old_room.json') }}"
     status_code: 200, 404   # allow 404 when no alias exists
@@ -44,6 +44,6 @@
       Authorization: "Bearer {{ dummy_access_token }}"
   register: discovery_room
 
-- name: Print the new discovery_room room id
-  ansible.builtin.debug:
-    var: discovery_room.json.room_id
+- name: Set the discovery_room_id variable
+  set_fact:
+    discovery_room_id: "{{ discovery_room.json.room_id }}"
